--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ p, label {
     text-align: center;
 }
 
-.searchBox {
+.searchSection {
     display: flex;
     color: white;
     justify-content: center;
@@ -47,15 +47,11 @@ p, label {
 }
 
 .filter { 
-    margin: 10px 10px;
+    margin-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     min-width: 0;
-}
-
-.filterName {
-    margin: 10px;
 }
 
 .searchBar {
@@ -91,6 +87,15 @@ p, label {
     fill: #5f6368;
 }
 
+.filterButton {
+    padding: 5px 25px;
+    min-width: 0;
+    border: 1px solid #dadce0;
+    border-radius: 50px;
+    height: 45px;
+    background: #fff;
+}
+
 .orderBox {
     display: none;
     border: 1px solid black;
@@ -119,7 +124,7 @@ p, label {
 
 .resultsBox {
     margin: 35px auto;
-    padding: 20px 20px 0px 20px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -140,6 +145,11 @@ p, label {
     height: 288px;
 }
 
+.userInfos {
+    display: flex;
+    flex-direction: column;
+}
+
 .userImage {
     box-shadow: 0px 6px 6px rgba(0, 255, 255, 0.1);
     margin: 0 auto;
@@ -154,7 +164,7 @@ p, label {
     width:100%
 }
 
-.userTextBox {
+.userDescription {
     display: flex;
     max-height: 130px;
     overflow: hidden;
@@ -183,22 +193,27 @@ p, label {
     
 }
 
-@media (min-width: 550px) {
+@media (min-width: 575px) {
     .brandBox {
         text-align: left;
     }
 
     .mainBox{
         padding: 0px 60px 48px;
-        max-width: 1200px;
+        max-width: 1528px;
         margin: 0 auto;
+    }
+
+    .filter {
+        margin-left: 30px;
+        margin-bottom: 0;
     }
 
     .filterBox {
         flex-direction: row-reverse;
     }
 
-    .userTextBox {
+    .userDescription {
         width: 100%;
         padding: 20px 20px 20px 40px;
     }
@@ -213,9 +228,9 @@ p, label {
     .resultsBox {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-gap: 20px;
+        grid-gap: 40px;
         order: 2;
-        padding: 35px 40px 0px 40px;
+        padding: 35px 40px 40px 40px;
     }
 
     .userBox {
