--- a/style/header.css
+++ b/style/header.css
@@ -82,12 +82,17 @@
     color: #5f6368;
     padding: 15px 25px;
     min-width: 0;
-    border: 2px solid #dadce0;
+    border: 1px solid #dadce0;
     border-radius: 50px;
     height: 60px;
     background: #fff;
     width: 100%;
     outline-color:  transparent;
+}
+
+.filterButton:hover {
+    /* background-image: linear-gradient(45deg, #FaFce0, #FFF, #FaFce0); */
+    cursor: pointer;
 }
 
 .filterButton.sharpBorder {
