--- a/style/userModal.css
+++ b/style/userModal.css
@@ -1,15 +1,44 @@
 #userModal {
     position: fixed;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
     opacity: 0;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
+    background-color: rgba(0, 0, 0, 0.7);
+    transition: opacity 5s;
 }
 
-.openUserModal {
+#userModal.openUserModal {
     opacity: 1;
     display: flex;
+    transition: opacity 5s;
+}
+
+.userModalCard {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 32px 25px 25px;
+    margin-bottom: 40px;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.08);
+    border-radius: 1.2rem;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    margin: 0 auto;
+    background-image: repeating-linear-gradient(45deg, white, lightgray 400px);
+    /* background-image: (45deg, red, orange, yellow, green, skyblue, blue, purple); */
+}
+
+.userModalCard > div {
+}
+
+#userModal .userBio {
+    display: flex;
+    max-height: initial;
 }
